<resources>
    <string name="app_name">JUN20</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="yes_image_description_string">Click For Yes</string>
    <string name="no_image_description_string">Click For No</string>
    <string name="play_game_string">Click To Play</string>
    <string name="quit_game_string">Click To Quit</string>
    <string name="game_Instructions_Text">Guess Which Button Reveals The Bomb Shell With The Onion Booty</string>
    <string name="button_one">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="onion_booty_description">Onion_Booty</string>
    <string name="milking_Peter_Description">Milking Peter</string>
    <string name="donkey_description">donkey</string>
</resources>
